--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   Jekyll Template for Project Websites
   providing documentation and blog post pages.
 
-baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
+baseurl: "/documentationdemo.github.io" # the subpath of your site, e.g. /blog/
 url: https://documentationdemo.github.io/ # the base hostname & protocol for your site
 git_address: https://github.com/documentationdemo/documentationdemo.github.io
 git_edit_address: https://github.com/documentationdemo/documentationdemo.github.io/blob/master
