--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Jekyll Doc Theme
-email: your-email@domain.com
+title: Documentation Demo
+email: xcortez@altair.com
 description: >
   Jekyll Template for Project Websites
   providing documentation and blog post pages.
