trying to create sub collection

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -6,9 +6,10 @@
   
 - title: Surfaces
   docs:
-  - surfaces
-  - plane
-  - cube
+  - title: Primitives
+    docs:
+    - plane
+    - cube
 
 - title: Examples
   docs:
