--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -14,3 +14,7 @@
   - cheatsheet
   - font-awesome
   - bootstrap
+
+exit_double: "Double right-click to exit the tool."
+
+surfaces_tab: "On the ribbon, click the **Surfaces** tab."
