--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,7 @@ collections:
   posts:
     permalink: /blog/:year/:month/:day/:title/
     output: true
+
+exit_double: "Double right-click to exit the tool."
+
+surfaces_tab: "On the ribbon, click the **Surfaces** tab."
