--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ collections:
     permalink: /blog/:year/:month/:day/:title/
     output: true
 
-forums: "https://documentationdemo.github.io/forum.html"
+forum: "https://documentationdemo.github.io/forum.html"
 
 exit_double: "Double right-click to exit the tool."
 
